fix timeline circles on mobile

--- a/src/components/timeline/timeline-card/timeline-card.scss
+++ b/src/components/timeline/timeline-card/timeline-card.scss
@@ -118,8 +118,11 @@
         }
 
         /* Make sure all circles are at the same spot */
-        &--left::after,
-        &--right::after {
+        // &--left::after,
+        // &--right::after {
+        //     left: 15px;
+        // }
+        .circle {
             left: 15px;
         }
     }
